Added Button functionality

--- a/index.html
+++ b/index.html
@@ -2,16 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-
-    <title>Rock Paper Sciccors</title>
+        <title>Rock Paper Sciccors</title>
+        <link rel="stylesheet" href="style.css">
 
     <style>
+
     </style>
 
     </head>
 
     <body>
-        
+
+        <div>
+            <h1 id="score">Current Score:</h1>
+        </div>
+
+        <div>
+            <h2 id="WinLoss">Win/Lose Ratio:</h2>
+        </div>
+
+        <div class="Buttons">
+            <button id="rockBtn">Rock</button>     
+            <button id="paperBtn">Paper</button>
+            <button id="scissorBtn">Scissors</button>       
+        </div>
+    
+
+
+
     </body>
 
     <script src="script.js"></script>
