--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div>
-            <h2 id="WinLoss">Win/Lose Ratio:</h2>
+            <h2 id="WinLoss">Win/Total Ratio:</h2>
         </div>
 
         <div class="Buttons">
